<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WeatherAndroid</string>
    <string name="action_settings">Settings</string>
    
    <string name="empty"></string>
    <string name="weather">天气</string>
    <string name="humidity">湿度</string>
    <string name="minmaxTemp">最低/最高温度</string>
    <string name="temp">温度</string>
    <string name="pm2.5">PM2.5</string>
    <string name="wind">风力大小</string>
    <string name="windValue">风力:0</string>
    
    <string name="user">用户</string>
    <string name="user_name">账户</string>
    <string name="user_password">密码</string>
    <string name="user_password_repeat">重复密码</string>
    <string name="gender">性别</string>
    <string name="Birthday">生日</string>
    <string name="Birthday_format">yy-MM-dd</string>
    <string name="phone">电话号码</string>
    <string name="email">邮箱地址</string>
    <string name="register_sumbit">提交</string>
    <string name="register_cancel">取消</string>
    
    <string name="login">登陆</string>
    <string name="register">注册</string>
    <string name="city">城市</string>
    <string name="province">省份</string>
    <string name="local_province">广东</string>
    <string name="local_province_hint">请输入省份</string>
    <string name="local_city">广州</string>
    <string name="local_city_hint">请输入城市</string>

   	<string name="updateing">Updateing&#8230;</string> 
   	
   	<string name="Monday">周一</string> 
   	<string name="Tuesday">周二</string> 
   	<string name="Wednesday">周三</string> 
   	<string name="Thursday">周四</string> 
   	<string name="Friday">周五</string> 
   	<string name="Saturday">周六</string> 
   	<string name="Sunday">周日</string> 
   	
   	<string name="future">星期	走势</string> 
    <string name="todayChart">今日	走势</string>
    
</resources>
