<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context="com.weatherandroid.activity.PreferenceActivity" 
    >

    <TextView
        android:id="@+id/user_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="28dp"
        android:layout_marginTop="25dp"
        android:text="@string/user"
        android:textStyle="bold"
        android:textSize="20sp" />

    <View
        android:id="@+id/line1"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/user_text"
        android:layout_marginTop="5dp"
        android:background="#AAAAAA" />
    
    <ImageView
        android:id="@+id/user_photo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@+id/line1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:contentDescription="@string/empty"
        android:src="@drawable/qingtian" />
    
    <TextView
        android:id="@+id/user_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="100dp"
        android:layout_marginTop="21dp"
        android:layout_alignStart="@id/user_text"
        android:layout_below="@id/user_photo"
        android:text="@string/user_name"
        android:textSize="18sp" />
    
    <TextView 
        android:id="@+id/user_password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_below="@id/user_name_text"
        android:layout_alignStart="@id/user_name_text"
        android:text="@string/user_password"
        android:textSize="18sp"
        />

    <View
        android:id="@+id/line2"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/city_text"
        android:layout_marginTop="5dp"
        android:background="#AAAAAA" />

    <TextView
        android:id="@+id/local_province_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/city_text"
        android:layout_below="@+id/line2"
        android:layout_marginTop="30dp"
        android:text="@string/province"
        android:textStyle="bold"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/city_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/user_text"
        android:layout_below="@+id/login_button"
        android:layout_marginTop="20dp"
        android:text="@string/city"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/province_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/local_province_text"
        android:layout_alignBottom="@+id/local_province_text"
        android:layout_alignEnd="@+id/line2"
        android:layout_marginEnd="18dp"
        android:ems="10"
        android:hint="@string/local_province_hint"
        android:inputType="text" />

    <TextView
        android:id="@+id/local_city_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/local_province_text"
        android:layout_below="@+id/province_edit_text"
        android:layout_marginTop="40dp"
        android:text="@string/city"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/local_city_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/local_city_text"
        android:layout_alignBottom="@+id/local_city_text"
        android:layout_alignStart="@+id/province_edit_text"
        android:ems="10"
        android:hint="@string/local_city_hint"
        android:inputType="text" />

    <EditText
        android:id="@+id/user_name_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/user_name_text"
        android:layout_alignBottom="@+id/user_name_text"
        android:layout_alignStart="@+id/province_edit_text"
        android:ems="10"
        android:hint="@string/user_name"
        android:inputType="text" />

    <EditText
        android:id="@+id/user_password_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/user_password_text"
        android:layout_alignBottom="@+id/user_password_text"
        android:layout_alignStart="@+id/user_name_edittext"
        android:inputType="textPassword"
        android:hint="@string/user_password"
        android:ems="10" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_password_edittext"
        android:layout_marginTop="18dp"
        android:layout_toEndOf="@+id/user_password_text"
        android:background="#E5E5E5"
        android:text="@string/login" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/city_text"
        android:layout_marginStart="50dp"
        android:layout_toEndOf="@id/login_button"
        android:background="#E5E5E5"
        android:text="@string/register" />

</RelativeLayout>
